--- a/top/index.html
+++ b/top/index.html
@@ -34,9 +34,9 @@
     <meta name="keyword"  content="赵化冰, zhaohuabing, Zhaohuabing, , 赵化冰的网络日志, 赵化冰的博客, Zhaohuabing Blog, 博客, 个人网站, 互联网, Web, 云原生, PaaS, Istio, Kubernetes, 微服务, Microservice">
     <link rel="shortcut icon" href="/img/favicon.ico">
 
-    <title>Posts-周周的博客 | EagleYing&#39;s Blog</title>
+    <title>Tops-周周的博客 | EagleYing&#39;s Blog</title>
 
-    <link rel="canonical" href="/post/">
+    <link rel="canonical" href="/top/">
 
     <link rel="stylesheet" href="/css/iDisqus.min.css"/>
 	
@@ -246,7 +246,7 @@
                 <ul class="list-inline text-center">
                    
                    <li>
-                       <a href='/post/index.xml' rel="alternate" type="application/rss+xml" title="EagleYing&#39;s Blog" >
+                       <a href='/top/index.xml' rel="alternate" type="application/rss+xml" title="EagleYing&#39;s Blog" >
                            <span class="fa-stack fa-lg">
                                <i class="fa fa-circle fa-stack-2x"></i>
                                <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
