--- a/top/about/index.html
+++ b/top/about/index.html
@@ -231,7 +231,7 @@
                     <h5>FRIENDS</h5>
                     <ul class="list-inline">
                         
-                        <li><a target="_blank" href="https://blog.erestu.top">Erestu的博客</a></li>
+                        <li><a target="_blank" href="https://blog.erestu.top/">Erestu的博客</a></li>
                         
                     </ul>
                 </section>
