blog-eagleying-com

--- a/top/about/index.html
+++ b/top/about/index.html
@@ -192,7 +192,7 @@
 <script src="/js/iDisqus.js"></script>
 <script>
 var disq = new iDisqus('disqus-comment', {
-    forum: 'eagle Ying',
+    forum: 'blog-yingeagle-com',
     api: 'https:\/\/disqus.yingeagle.com',
 	site: 'https:\/\/blog.yingeagle.com',
     mode: 1,
